# MEC

./: CMakeLists.txt  README.md  blas_conv.cpp  blas_mec.cpp  build.sh  eigen_conv.cpp  eigen_mec.cpp  profile1.sh  profile2.sh  profile3.sh  profile4.sh  profile5.sh
build_arm/: CMakeCache.txt  Makefile  blas_conv  blas_mec  cmake_install.cmake
build_x86/: CMakeCache.txt  Makefile  blas_conv  blas_mec  cmake_install.cmake
include/: util.h
